--- a/src/Widgets/MapView/MapView.css
+++ b/src/Widgets/MapView/MapView.css
@@ -1,7 +1,3 @@
-* {
-  margin: 0;
-}
-
 body {
   background-color: #f5f6fa;
 }
@@ -9,8 +5,6 @@ body {
 .app {
   display: flex;
   justify-content: space-evenly;
-  background-color: #f5f6fa;
-  padding: 20px;
 }
 
 .app__dropdown {
@@ -22,11 +16,11 @@ body {
   align-items: center;
   margin-bottom: 20px;
   justify-content: space-between;
+  flex-direction: column;
 }
 
 .app__header > h1 {
-  color: #fc3c3c;
-  font-size: 2rem;
+  color: #ad3939;
 }
 
 .app__stats {
@@ -41,7 +35,6 @@ body {
 .app__information > h3 {
   color: #6a5d5d;
   font-weight: 400;
-  font-size: 1.5rem;
   margin-bottom: 1rem;
 }
 
@@ -53,4 +46,8 @@ body {
   .app {
     flex-direction: column;
   }
+}
+
+.c19t-country__select, .c19t-country__option {
+  font-size: inherit !important;
 }
